Post cpp2v-bhv perf logs as comment in MR

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -462,6 +462,8 @@ build-cpp2v-trigger:
     UPSTREAM_CPP2V_CORE_COMMIT_REF_HASH: $CPP2V_CORE_COMMIT_REF_HASH
     DOWNSTREAM_BRANCH: $DOWNSTREAM_BRANCH
     FULL_TIMING: $FULL_TIMING
+    ORIGIN_MERGE_REQUEST_PROJECT_ID: $CI_MERGE_REQUEST_PROJECT_ID
+    ORIGIN_MERGE_REQUEST_IID: $CI_MERGE_REQUEST_IID
     # TODO remove eventually; only for legacy builds
     UPSTREAM_CPP2V_CORE_JOB_ID: $ARTIFACT_JOB_ID
   trigger:
