--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -313,7 +313,6 @@ prepare_cpp2v_env:
     - cp $CI_PROJECT_DIR/dune-ci/root-dune-project /tmp/build-dir/dune-project
     # Set up the cache and dune configuration.
     - mkdir -p ~/.cache/ ~/.config/dune/
-    - time ./fm-ci-tools/fm_dune/rsync_dune pull delete
     - ls ~/.cache/dune
     - cp $CI_PROJECT_DIR/dune-ci/dune_config ~/.config/dune/config
 
@@ -321,9 +320,6 @@ prepare_cpp2v_env:
   after_script:
     - source build.env
     - cat build.env
-    - export RSYNC_PUSH
-    - time ./fm-ci-tools/fm_dune/rsync_dune push default
-    - ssh ${DUNE_USER}@${FM_CACHE_SERVER} bash -c "'echo `date  +%Y%m%d%H%M%S` - $CI_PROJECT_NAME - $CI_JOB_NAME - $CI_JOB_ID >> ${RSYNC_CACHE_PATH}/test_rsync_fm1.txt'"
 
 .dune-base:
   extends:
@@ -333,7 +329,7 @@ prepare_cpp2v_env:
   variables:
     CODEQ_LOG: ${CI_PROJECT_DIR}/dune_build_codeq.log
   tags:
-    - ${DUNE_TAG}
+    - fm.nfs
 
 .dune-build-base:
   extends:
