Pass pipeline url downstream

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -466,6 +466,7 @@ build-cpp2v-trigger:
     FULL_TIMING: $FULL_TIMING
     ORIGIN_MERGE_REQUEST_PROJECT_ID: $CI_MERGE_REQUEST_PROJECT_ID
     ORIGIN_MERGE_REQUEST_IID: $CI_MERGE_REQUEST_IID
+    ORIGIN_MERGE_REQUEST_PIPELINE_URL: $CI_PIPELINE_URL
     # TODO remove eventually; only for legacy builds
     UPSTREAM_CPP2V_CORE_JOB_ID: $ARTIFACT_JOB_ID
   trigger:
