--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -341,8 +341,8 @@ prepare_cpp2v_env:
     - echo "fmdeps/cpp2v-core:$(git rev-parse HEAD)" | tee build/gitshas.txt
     # Set up the environment and run the build (in the prepared workspace).
     - cd /tmp/build-dir/fmdeps/cpp2v-core
-    - time dune build -j ${NJOBS} . coq-cpp2v.install coq-cpp2v-bin.install 2>&1 | tee -a ${CODEQ_LOG}
-    - time dune build -j ${NJOBS} -p coq-cpp2v,coq-cpp2v-bin 2>&1 | tee -a ${CODEQ_LOG}
+    - time dune build -j ${NJOBS} . coq-cpp2v.install coq-cpp2v-bin.install 2>&1 | ocaml ./fm-ci-tools/fm_dune/filter_dune_output.ml | tee -a ${CODEQ_LOG}
+    - time dune build -j ${NJOBS} -p coq-cpp2v,coq-cpp2v-bin 2>&1 | ocaml ./fm-ci-tools/fm_dune/filter_dune_output.ml | tee -a ${CODEQ_LOG}
     - cd $CI_PROJECT_DIR/
     # ARTIFACT_JOB_ID is used for downstream jobs to get artifacts from
     # this build. The value of CI_JOB_ID is only available in this
@@ -381,7 +381,7 @@ prepare_cpp2v_env:
     # Set up the environment and run the build (in the prepared workspace).
     - cd /tmp/build-dir/fmdeps/cpp2v-core
     - >
-      (time dune runtest -j ${NJOBS} 2>&1 || (echo "Error: cram tests failed" && exit 1)) | tee -a ${CODEQ_LOG}
+      (time dune runtest -j ${NJOBS} 2>&1 || (echo "Error: cram tests failed" && exit 1)) | ocaml ./fm-ci-tools/fm_dune/filter_dune_output.ml | tee -a ${CODEQ_LOG}
     - cd $CI_PROJECT_DIR/
     - time ./fm-ci-tools/code_quality.py cpp2v-core
   artifacts:
