Split out the name mangler.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ IF (${LLVM_VERSION} VERSION_LESS 11.0.0)
     src/Formatter.cpp
     src/Logging.cpp
     src/ClangPrinter.cpp
+    src/BedRockMangle.cpp
     src/StringPrettyPrinter.cpp
     src/ToCoq.cpp
     src/FromClang.cpp
@@ -97,6 +98,7 @@ ELSE(${LLVM_VERSION} VERSION_LESS 11.0.0)
     src/Formatter.cpp
     src/Logging.cpp
     src/ClangPrinter.cpp
+    src/BedRockMangle.cpp
     src/StringPrettyPrinter.cpp
     src/ToCoq.cpp
     src/FromClang.cpp
