--- a/theories/noimport/dune
+++ b/theories/noimport/dune
@@ -1,5 +1,5 @@
 (include_subdirs qualified)
 (coq.theory
  (name bedrock.noimport)
- (theories bedrock.lang)
+ (theories bedrock.lang iris stdpp)
 )
