--- a/coq-lens/.gitignore
+++ b/coq-lens/.gitignore
@@ -1,38 +1,2 @@
-.*.aux
-*.a
-*.cma
-*.cmi
-*.cmo
-*.cmx
-*.cmxa
-*.cmxs
-*.glob
-*.ml.d
-*.ml4.d
-*.mli.d
-*.mllib.d
-*.mlpack.d
-*.native
-*.o
-*.v.d
-*.vio
-*.vo
-*.vok
-*.vos
-.coq-native/
-.csdp.cache
-.lia.cache
-.nia.cache
-.nlia.cache
-.nra.cache
-csdp.cache
-lia.cache
-nia.cache
-nlia.cache
-nra.cache
-*~
-.Makefile.coq.d
-Makefile.coq
-Makefile.coq.conf
-.coqdeps.d
-.envrc
+coq-lens-elpi.install
+coq-lens.install
