--- a/coq-lens/coq-lens-tc.opam
+++ b/coq-lens/coq-lens-tc.opam
@@ -7,7 +7,9 @@ homepage: "https://github.com/bedrocksystems/cpp2v"
 bug-reports: "https://github.com/bedrocksystems/cpp2v/issues"
 depends: [
   "dune" {>= "3.6"}
-  "coq" {>= "8.13.0" & < "8.19~"}
+  "coq-lens"
+  "coq" {>= "8.17.0" & < "8.18~"}
+  "coq-metacoq-template" {= "1.2+8.17"}
   "odoc" {with-doc}
 ]
 build: [
