--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -418,10 +418,11 @@ dune-build-llvm14:
     - .dune-build-aux
     - .llvm14
 
-dune-build-public:
-  extends:
-    - .dune-build-aux
-    - .public
+# TODO FM-4156 Reenable
+# dune-build-public:
+#   extends:
+#     - .dune-build-aux
+#     - .public
 
 dune-test:
   extends:
@@ -444,12 +445,13 @@ dune-test-llvm14:
   needs:
     - dune-build-llvm14
 
-dune-test-public:
-  extends:
-    - .dune-test-aux
-    - .public
-  needs:
-    - dune-build-public
+# TODO FM-4156 Reenable
+# dune-test-public:
+#   extends:
+#     - .dune-test-aux
+#     - .public
+#   needs:
+#     - dune-build-public
 
 build-cpp2v-trigger:
   rules:
