Port [coq-lens] to 8.18 + coq_lang 0.8.
Co-Authored-By: Paolo G. Giarrusso <paolo@bedrocksystems.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -146,7 +146,13 @@ build_latest:
 # that those match the versions in our "public" Docker image.
 build_public_opam:
   script:
-    - opam install --assume-depexts -y .
+    - opam pin add -n -y coq-cpp2v.dev .
+    - opam pin add -n -y coq-cpp2v-bin.dev .
+    - opam pin add -n -y coq-lens.dev ./coq-lens
+    - opam pin add -n -y coq-lens-elpi.dev ./coq-lens
+    # We pin, but don't build coq-lens-tc since we don't have public deps for it.
+    - opam pin add -n -y coq-lens-tc.dev ./coq-lens
+    - opam install --assume-depexts -y coq-cpp2v coq-cpp2v-bin coq-lens coq-lens-elpi
   needs: [dune-build]
   extends:
     - .build_aux
@@ -341,8 +347,9 @@ prepare_cpp2v_env:
     - echo "fmdeps/cpp2v-core:$(git rev-parse HEAD)" | tee build/gitshas.txt
     # Set up the environment and run the build (in the prepared workspace).
     - cd /tmp/build-dir/fmdeps/cpp2v-core
+    - time dune build -j ${NJOBS} . coq-lens/coq-lens.install coq-lens/coq-lens-elpi.install coq-lens/coq-lens-tc.install 2>&1 | ocaml ./fm-ci-tools/fm_dune/filter_dune_output.ml | tee -a ${CODEQ_LOG}
     - time dune build -j ${NJOBS} . coq-cpp2v.install coq-cpp2v-bin.install 2>&1 | ocaml ./fm-ci-tools/fm_dune/filter_dune_output.ml | tee -a ${CODEQ_LOG}
-    - time dune build -j ${NJOBS} -p coq-lens,coq-cpp2v,coq-cpp2v-bin 2>&1 | ocaml ./fm-ci-tools/fm_dune/filter_dune_output.ml | tee -a ${CODEQ_LOG}
+    - time dune build -j ${NJOBS} -p coq-lens,coq-lens-elpi,coq-lens-tc,coq-cpp2v,coq-cpp2v-bin 2>&1 | ocaml ./fm-ci-tools/fm_dune/filter_dune_output.ml | tee -a ${CODEQ_LOG}
     - cd $CI_PROJECT_DIR/
     # ARTIFACT_JOB_ID is used for downstream jobs to get artifacts from
     # this build. The value of CI_JOB_ID is only available in this
