--- a/coq-lens/coq-lens-elpi.opam
+++ b/coq-lens/coq-lens-elpi.opam
@@ -6,9 +6,10 @@ authors: ["Gregory Malecha <gregory@bedrocksystems.com>"]
 homepage: "https://github.com/bedrocksystems/cpp2v"
 bug-reports: "https://github.com/bedrocksystems/cpp2v/issues"
 depends: [
-  "dune" {>= "3.6"}
+  "dune" {>= "3.8"}
   "coq-lens"
-  "coq-elpi"
+  "coq" {>= "8.18.0" & < "8.19~"}
+  "coq-elpi" {= "1.19.3"}
   "odoc" {with-doc}
 ]
 build: [
