--- a/_CoqProject.template
+++ b/_CoqProject.template
@@ -183,6 +183,7 @@ theories/lang/cpp/logic/operator.v
 theories/lang/cpp/logic/rep.v
 theories/lang/cpp/logic/rep_defs.v
 theories/lang/cpp/logic/heap_pred.v
+theories/lang/cpp/logic/rep_proofmode.v
 theories/lang/cpp/logic/cptr.v
 theories/lang/cpp/logic/wp.v
 theories/lang/cpp/logic/const.v
