--- a/_CoqProject.template
+++ b/_CoqProject.template
@@ -195,6 +195,7 @@ theories/lang/cpp/logic/heap_pred/aggregate.v
 theories/lang/cpp/logic/heap_pred/any.v
 theories/lang/cpp/logic/heap_pred/block.v
 theories/lang/cpp/logic/heap_pred/everywhere.v
+theories/lang/cpp/logic/heap_pred/least.v
 theories/lang/cpp/logic/heap_pred/null.v
 theories/lang/cpp/logic/heap_pred/prelude.v
 theories/lang/cpp/logic/heap_pred/prim.v
