--- a/_CoqProject.template
+++ b/_CoqProject.template
@@ -103,6 +103,7 @@ theories/lang/bi/na_invariants.v
 theories/lang/bi/cancelable_invariants.v
 theories/lang/bi/prelude.v
 theories/lang/bi/ChargeCompat.v
+theories/lang/bi/wand_borrow.v
 theories/lang/bi/errors.v
 theories/lang/bi/linearity.v
 theories/lang/bi/big_op.v
