--- a/_CoqProject.template
+++ b/_CoqProject.template
@@ -60,6 +60,7 @@ theories/prelude/prelude.v
 theories/prelude/sets.v
 theories/prelude/finite.v
 theories/prelude/fin_map_dom.v
+theories/prelude/functions.v
 
 # coq-elpi prelude
 theories/prelude/elpi/basis.v
