cpp2v: Structured names under `--ast2`
Command-line:

- Add `--ast2` to print structured names for templated code
- Add `--trace=choices` to print a debug trace
- Add `--name-test` to test structured names

Also,

- Add `loc::loc`, `ClangPrinter::{error_prefix,debug_dump}` for diagnostics
- Generalize `print.list` to work with `llvm::ArrayRef<T>`
- Adjust `print.list` to pass only the list element to its callback
- Fix `VisitAutoType`. In dependent contexts, the deduced type for
`auto` can be (a `QualType` carrying) nullptr.
- Pass location information into `ClangPrinter::printQualType`
(usually) and several other functions that might receive `nullptr`
- (In progress) Avoid `assert(b && "message")` when checking clang's
"invariants" since we no longer enable assertions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 ##
-## Copyright (c) 2020 BedRock Systems, Inc.
+## Copyright (c) 2020-2024 BedRock Systems, Inc.
 ## This software is distributed under the terms of the BedRock Open-Source License.
 ## See the LICENSE-BedRock file in the repository root for details.
 ##
@@ -59,6 +59,7 @@ IF (${LLVM_VERSION} VERSION_LESS 11.0.0)
     STATIC
     src/Elaborate.cpp
     src/Version.cpp
+    src/PrintName.cpp
     src/PrintExpr.cpp
     src/PrintStmt.cpp
     src/PrintType.cpp
@@ -70,8 +71,9 @@ IF (${LLVM_VERSION} VERSION_LESS 11.0.0)
     src/NotationWriter.cpp
     src/Formatter.cpp
     src/Logging.cpp
+    src/Location.cpp
+	src/Template.cpp
     src/ClangPrinter.cpp
-    src/BedRockMangle.cpp
     src/StringPrettyPrinter.cpp
     src/ToCoq.cpp
     src/FromClang.cpp
@@ -86,6 +88,7 @@ ELSE(${LLVM_VERSION} VERSION_LESS 11.0.0)
     PARTIAL_SOURCES_INTENDED
     src/Elaborate.cpp
     src/Version.cpp
+    src/PrintName.cpp
     src/PrintExpr.cpp
     src/PrintStmt.cpp
     src/PrintType.cpp
@@ -97,8 +100,9 @@ ELSE(${LLVM_VERSION} VERSION_LESS 11.0.0)
     src/NotationWriter.cpp
     src/Formatter.cpp
     src/Logging.cpp
+    src/Location.cpp
+	src/Template.cpp
     src/ClangPrinter.cpp
-    src/BedRockMangle.cpp
     src/StringPrettyPrinter.cpp
     src/ToCoq.cpp
     src/FromClang.cpp
