--- a/coq-cpp2v.opam
+++ b/coq-cpp2v.opam
@@ -18,6 +18,8 @@ depends: [
   "coq" {>= "8.18.0" & < "8.19~"}
   "coq-ext-lib" {= "0.11.8"}
   "coq-iris" {= "dev.2023-10-17.0.b990ffb7"}
+  "coq-lens"
+  "coq-lens-elpi"
   "elpi" {= "1.17.3"}
   "coq-elpi" {= "1.19.3"}
   "odoc" {with-doc}
