--- a/theories/prelude/dune
+++ b/theories/prelude/dune
@@ -2,5 +2,5 @@
 (coq.theory
  (name bedrock.prelude)
  (package coq-cpp2v)
- (theories iris stdpp elpi)
+ (theories iris stdpp elpi Lens Lens.Elpi)
 )
