Update dune deps + disable [coq-lens-tc].

--- a/coq-cpp2v.opam
+++ b/coq-cpp2v.opam
@@ -15,13 +15,13 @@ homepage: "https://github.com/bedrocksystems/cpp2v"
 bug-reports: "https://github.com/bedrocksystems/cpp2v/issues"
 depends: [
   "dune" {>= "3.8"}
-  "coq" {>= "8.18.0" & < "8.19~"}
-  "coq-ext-lib" {= "0.11.8"}
-  "coq-iris" {= "dev.2023-10-17.0.b990ffb7"}
+  "coq" {>= "8.19.0" & < "8.20~"}
+  "coq-ext-lib" {= "0.12.1"}
+  "coq-iris" {= "dev.2024-03-06.1.9c192c8d"}
   "coq-lens"
   "coq-lens-elpi"
-  "elpi" {= "1.17.3"}
-  "coq-elpi" {= "1.19.3"}
+  "elpi" {= "1.18.2"}
+  "coq-elpi" {= "2.0.2+bedrock+vanilla-coq"}
   "odoc" {with-doc}
 ]
 build: [
