--- a/coq-lens/tests/dune
+++ b/coq-lens/tests/dune
@@ -4,6 +4,6 @@
   %{bin:coqc}
   %{bin:coqdep}
   (package coq-lens)
-  (package coq-lens-tc)
+  ;(package coq-lens-tc)
   (package coq-lens-elpi)
   setup-project.sh))
