--- a/theories/prelude/dune
+++ b/theories/prelude/dune
@@ -4,3 +4,12 @@
  (package coq-cpp2v)
  (theories iris stdpp elpi Lens Lens.Elpi)
 )
+
+; copies the .elpi files below into dune's _build directory
+(rule
+ (target dummy.v)
+ (deps
+  elpi/coq.elpi
+  ; elpi/more_files.elpi
+  )
+ (action (with-stdout-to %{target} (echo "(* dummy file *)"))))
