--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,16 +34,12 @@
 variables:
   LLVM_CUR_MAJ_VER: "16"
   docker_img_prefix: registry.gitlab.com/bedrocksystems/docker-image
-  fm_docs_img: ${docker_img_prefix}:fm-docs
-  # Note: when testing llvm bumps, use
-  #fm_docs_img: ${docker_img_prefix}:fm-docs-coq816
+  fm_docs_img: ${docker_img_prefix}:fm-docs-coq819
   img_prefix: cpp2v-llvm
 
 # Configs
 .base:
-  image: ${docker_img_prefix}:${img_prefix}${LLVM_MAJ_VER}
-  # Note: when testing llvm bumps, use
-  #image: ${docker_img_prefix}:${img_prefix}${LLVM_MAJ_VER}-coq816
+  image: ${docker_img_prefix}:${img_prefix}${LLVM_MAJ_VER}-coq819
 
 .latest:
   extends: .base
