--- a/_CoqProject.template
+++ b/_CoqProject.template
@@ -42,6 +42,8 @@ theories/prelude/wrap.v
 theories/prelude/fin.v
 theories/prelude/letstar.v
 theories/prelude/reserved_notation.v
+theories/prelude/relations.v
+theories/prelude/under_rel_proper.v
 
 theories/prelude/base.v
 theories/prelude/option.v
@@ -90,6 +92,10 @@ theories/prelude/elpi/derive/lens.v
 theories/lang/prelude/base.v
 theories/lang/prelude/addr.v
 
+# Proofmode.
+theories/lang/proofmode/proofmode.v
+theories/lang/proofmode/own_obs.v
+
 # Algebraic structures
 theories/lang/algebra/list.v
 theories/lang/algebra/telescopes.v
@@ -97,6 +103,9 @@ theories/lang/algebra/coGset.v
 theories/lang/algebra/gset_bij.v
 theories/lang/algebra/big_op.v
 theories/lang/algebra/monoid.v
+theories/lang/algebra/dfrac_agree.v
+theories/lang/algebra/excl_auth.v
+theories/lang/algebra/frac_auth.v
 theories/lang/cpp/algebra/cfrac.v
 
 # BI-polymorphic modules
@@ -126,6 +135,9 @@ theories/lang/bi/split_andb.v
 theories/lang/bi/split_andb_tests.v
 theories/lang/bi/split_frac.v
 theories/lang/bi/split_frac_tests.v
+theories/lang/bi/atomic_read.v
+theories/lang/bi/atomic_update.v
+theories/lang/bi/includedI.v
 theories/lang/cpp/bi/split_cfrac.v
 theories/lang/cpp/bi/split_cfrac_tests.v
 theories/lang/cpp/bi/cfractional.v
@@ -144,6 +156,7 @@ theories/lang/bi/spec/knowledge.v
 theories/lang/bi/spec/nary_classes.v
 
 # Specific BIs
+theories/lang/si_logic/algebra.v
 theories/lang/si_logic/bi.v
 theories/lang/cpp/logic/upred_entailsN.v
 theories/lang/cpp/logic/iprop_own.v
@@ -240,6 +253,9 @@ theories/lang/cpp/logic/cstring.v
 theories/lang/cpp/logic/zstring.v
 theories/lang/cpp/logic/string.v
 theories/lang/cpp/logic/vbyte.v
+theories/lang/cpp/logic/lib/agree.v
+theories/lang/cpp/logic/lib/auth_frac.v
+theories/lang/cpp/logic/lib/dfrac_agree.v
 theories/lang/cpp/logic.v
 
 # Specifications
