--- a/coq-cpp2v.opam
+++ b/coq-cpp2v.opam
@@ -17,6 +17,7 @@ depends: [
   "dune" {>= "3.8"}
   "coq" {>= "8.19.0" & < "8.20~"}
   "coq-ext-lib" {= "0.12.1"}
+  "coq-upoly"
   "coq-iris" {= "dev.2024-03-06.1.9c192c8d"}
   "coq-lens"
   "coq-lens-elpi"
