--- a/_CoqProject.template
+++ b/_CoqProject.template
@@ -13,9 +13,33 @@
 -arg -w -arg +future-coercion-class-field
 
 -Q coq-lens/Lens Lens
+-Q coq-upoly/upoly bedrock.upoly
 -Q theories/prelude bedrock.prelude
 -Q theories/lang bedrock.lang
 -Q theories/noimport/doc bedrock.noimport.doc
+
+# Monads
+coq-upoly/upoly/prelude.v
+coq-upoly/upoly/base.v
+coq-upoly/upoly/monoid.v
+coq-upoly/upoly/UTypes.v
+coq-upoly/upoly/prod.v
+coq-upoly/upoly/sum.v
+coq-upoly/upoly/option.v
+coq-upoly/upoly/list.v
+coq-upoly/upoly/id.v
+coq-upoly/upoly/trace.v
+coq-upoly/upoly/reader.v
+coq-upoly/upoly/writer.v
+coq-upoly/upoly/state.v
+coq-upoly/upoly/optionT.v
+coq-upoly/upoly/listT.v
+coq-upoly/upoly/traceT.v
+coq-upoly/upoly/readerT.v
+coq-upoly/upoly/writerT.v
+coq-upoly/upoly/stateT.v
+coq-upoly/upoly/effects.v
+coq-upoly/upoly/upoly.v
 
 # Lens library (only the Elpi version is required)
 coq-lens/Lens/Lens.v
