--- a/_CoqProject.template
+++ b/_CoqProject.template
@@ -91,9 +91,12 @@ theories/prelude/fin_sets.v
 theories/prelude/listset_nodup.v
 theories/prelude/prelude.v
 theories/prelude/sets.v
+theories/prelude/propset.v
 theories/prelude/finite.v
 theories/prelude/fin_map_dom.v
 theories/prelude/functions.v
+theories/prelude/sts.v
+theories/prelude/lens.v
 
 theories/prelude/tactics/base_dbs.v
 theories/prelude/tactics/telescopes.v
@@ -121,6 +124,7 @@ theories/lang/prelude/addr.v
 # Proofmode.
 theories/lang/proofmode/proofmode.v
 theories/lang/proofmode/own_obs.v
+theories/lang/proofmode/fancy_updates.v
 
 # Algebraic structures
 theories/lang/algebra/list.v
@@ -132,6 +136,8 @@ theories/lang/algebra/monoid.v
 theories/lang/algebra/dfrac_agree.v
 theories/lang/algebra/excl_auth.v
 theories/lang/algebra/frac_auth.v
+theories/lang/algebra/authset.v
+theories/lang/algebra/restrict.v
 theories/lang/cpp/algebra/cfrac.v
 
 # BI-polymorphic modules
@@ -163,7 +169,11 @@ theories/lang/bi/split_frac.v
 theories/lang/bi/split_frac_tests.v
 theories/lang/bi/atomic_read.v
 theories/lang/bi/atomic_update.v
+theories/lang/bi/atomic_update_properties.v
+theories/lang/bi/fupd_iff.v
 theories/lang/bi/includedI.v
+theories/lang/bi/monpred_entailsN.v
+theories/lang/bi/prop_constraints.v
 theories/lang/cpp/bi/split_cfrac.v
 theories/lang/cpp/bi/split_cfrac_tests.v
 theories/lang/cpp/bi/cfractional.v
@@ -184,11 +194,6 @@ theories/lang/bi/spec/nary_classes.v
 # Specific BIs
 theories/lang/si_logic/algebra.v
 theories/lang/si_logic/bi.v
-theories/lang/cpp/logic/upred_entailsN.v
-theories/lang/cpp/logic/iprop_own.v
-theories/lang/cpp/logic/iprop_invariants.v
-theories/lang/cpp/logic/monpred_entailsN.v
-theories/lang/cpp/logic/monpred_own.v
 
 # Arithmetic support theory
 theories/lang/cpp/arith/types.v
@@ -230,10 +235,25 @@ theories/lang/cpp/semantics.v
 
 # Program Logic
 theories/lang/base_logic/mpred.v
+theories/lang/base_logic/upred_entailsN.v
+theories/lang/base_logic/iprop_prop.v
+theories/lang/base_logic/iprop_own.v
+theories/lang/base_logic/iprop_invariants.v
+theories/lang/base_logic/mpred_prop.v
+theories/lang/base_logic/monpred_own.v
+theories/lang/base_logic/monpred_invariants.v
+theories/lang/base_logic/own_instances.v
+theories/lang/base_logic/invariants.v
+theories/lang/base_logic/lib/auth_set.v
+theories/lang/base_logic/lib/spectra.v
+theories/lang/base_logic/lib/spectra_iprop.v
+theories/lang/base_logic/lib/spectra_mpred.v
+
+
+
 theories/lang/cpp/logic/entailsN.v
 theories/lang/cpp/logic/mpred.v
 theories/lang/cpp/logic/pred.v
-theories/lang/cpp/logic/own_instances.v
 theories/lang/cpp/logic/pred_paradoxes.v
 theories/lang/cpp/logic/path_pred.v
 theories/lang/cpp/logic/operator.v
